--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -59,7 +59,7 @@ block content
                       span.glyphicon.glyphicon-star
                       span.glyphicon.glyphicon-star
                       span.glyphicon.glyphicon-star
-                    span.reviewAuthor Mathias
+                    span.reviewAuthor &nbsp; Mathias &nbsp;
                     small.reviewTimestamp Jan 31 2015
                   .col-xs-12
                     p What a great place. I can't say enough good things about it.
@@ -71,7 +71,7 @@ block content
                       span.glyphicon.glyphicon-star
                       span.glyphicon.glyphicon-star-empty
                       span.glyphicon.glyphicon-star-empty
-                    span.reviewAuthor Charlie Chaplin
+                    span.reviewAuthor &nbsp; Charlie Chaplin &nbsp;
                     small.reviewTimestamp June 28 1984
                   .col-xs-12
                     p It was okay. Coffee wasn't great, but the wifi was fast.
