--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -23,7 +23,8 @@ html(ng-app='loc8rApp')
               a(href='/signin/') Sign in
 
     .container
-      block content
+      div(ng-view)
+        block content
 
       footer
         .row
@@ -31,7 +32,8 @@ html(ng-app='loc8rApp')
             small &copy; Mathias 2015
     
     script(src='/angular/angular.min.js')
-    script(src='/angular/loc8rApp.js')
+    script(src='/lib/angular-route.min.js')
+    script(src='/app.js')
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascript/validation.js')
