--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -34,6 +34,7 @@ html(ng-app='loc8rApp')
     script(src='/angular/angular.min.js')
     script(src='/lib/angular-route.min.js')
     script(src='/app.js')
+    script(src='/home/home.controller.js')
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascript/validation.js')
