--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -35,6 +35,8 @@ html(ng-app='loc8rApp')
     script(src='/lib/angular-route.min.js')
     script(src='/app.js')
     script(src='/home/home.controller.js')
+    script(src='/common/services/loc8rData.service.js')
+    script(src='/common/services/geolocation.service.js')
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascript/validation.js')
