--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -37,6 +37,8 @@ html(ng-app='loc8rApp')
     script(src='/home/home.controller.js')
     script(src='/common/services/loc8rData.service.js')
     script(src='/common/services/geolocation.service.js')
+    script(src='/common/filters/formatDistance.filter.js')
+    script(src='/common/directive/ratingStars/ratingStars.directive.js')
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascript/validation.js')
